[tool.poetry]
name = "raise-me"
version = "0.0.1"
description = ""
authors = ["Fernando Ancona Camara <fernando.ancona@claytabase.co.uk>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
