[tool.poetry]
name = "raise-me"
version = "0.0.2"
description = "Serverless event broker which allows connecting native cloud events (AWS & GCP) to targets declaratively."
license = "MIT"
authors = ["Fernando Ancona <f.anconac@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/ferancona/raise-me"
repository = "https://github.com/ferancona/raise-me"
keywords = ["serverless", "openwhisk", "pulumi", "aws", "gcp"]

[tool.poetry.scripts]
raise = "raise_me.app:app"

[tool.poetry.dependencies]
python = "^3.10"
boto3 = "^1.24.50"
requests = "^2.28.1"
"ruamel.yaml" = "^0.17.21"
constructs = "^10.1.85"
pulumi = "^3.38.0"
pulumi-aws = "^5.11.0"
typer = {extras = ["all"], version = "^0.6.1"}
cloudevents = "^1.6.1"
pulumi-gcp = "^6.37.0"

[tool.poetry.dev-dependencies]
pytest = ">=5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
